alignment issue fixes

--- a/static/sass/cards/_card-5.scss
+++ b/static/sass/cards/_card-5.scss
@@ -55,6 +55,10 @@
     .c-cards-view {
         text-align: center;
 
+        &__category-wrap {
+            @include justify-content(center);
+        }
+
         &__author {
             @include justify-content(center);
 
